--- a/0_11_完整的训练流程.ipynb
+++ b/0_11_完整的训练流程.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -181,60 +181,38 @@
       "训练数据集的长度：50000\n",
       "测试数据集的长度：10000\n",
       "-----第 1 轮训练开始-----\n",
-      "time: 0.6083858013153076\n",
-      "训练次数：100，Loss：2.2892918586730957\n",
-      "time: 1.2415070533752441\n",
-      "训练次数：200，Loss：2.2790653705596924\n",
-      "time: 1.8522779941558838\n",
-      "训练次数：300，Loss：2.238877296447754\n",
-      "time: 2.485807180404663\n",
-      "训练次数：400，Loss：2.1648778915405273\n",
-      "time: 3.1150834560394287\n",
-      "训练次数：500，Loss：2.0433621406555176\n",
-      "time: 3.745764970779419\n",
-      "训练次数：600，Loss：2.0219874382019043\n",
-      "time: 4.363219261169434\n",
-      "训练次数：700，Loss：2.008251190185547\n",
-      "整体测试集上的Loss：313.6579860448837\n",
-      "整体测试集上的正确率：0.2799000144004822\n",
-      "-----第 2 轮训练开始-----\n",
-      "time: 6.04424262046814\n",
-      "训练次数：800，Loss：1.890910029411316\n",
-      "time: 6.635796070098877\n",
-      "训练次数：900，Loss：1.8351696729660034\n",
-      "time: 7.2355451583862305\n",
-      "训练次数：1000，Loss：1.9067059755325317\n",
-      "time: 7.853265047073364\n",
-      "训练次数：1100，Loss：1.9500449895858765\n",
-      "time: 8.444150924682617\n",
-      "训练次数：1200，Loss：1.7067413330078125\n",
-      "time: 9.035863399505615\n",
-      "训练次数：1300，Loss：1.6550331115722656\n",
-      "time: 9.62783145904541\n",
-      "训练次数：1400，Loss：1.7536404132843018\n",
-      "time: 10.22350287437439\n",
-      "训练次数：1500，Loss：1.8127974271774292\n",
-      "整体测试集上的Loss：316.100129365921\n",
-      "整体测试集上的正确率：0.28790000081062317\n",
-      "-----第 3 轮训练开始-----\n",
-      "time: 11.909422636032104\n",
-      "训练次数：1600，Loss：1.7636224031448364\n",
-      "time: 12.506839990615845\n",
-      "训练次数：1700，Loss：1.6744425296783447\n",
-      "time: 13.092845916748047\n",
-      "训练次数：1800，Loss：1.968033790588379\n",
-      "time: 13.678503036499023\n",
-      "训练次数：1900，Loss：1.714121699333191\n",
-      "time: 14.270248651504517\n",
-      "训练次数：2000，Loss：1.9118351936340332\n",
-      "time: 14.880026817321777\n",
-      "训练次数：2100，Loss：1.5211042165756226\n",
-      "time: 15.533589363098145\n",
-      "训练次数：2200，Loss：1.5002002716064453\n",
-      "time: 16.139006853103638\n",
-      "训练次数：2300，Loss：1.7962427139282227\n",
-      "整体测试集上的Loss：267.00492000579834\n",
-      "整体测试集上的正确率：0.38600000739097595\n"
+      "time: 1.5415096282958984\n",
+      "训练次数：100，Loss：2.28582501411438\n",
+      "time: 2.4119858741760254\n",
+      "训练次数：200，Loss：2.2781243324279785\n",
+      "time: 3.0227997303009033\n",
+      "训练次数：300，Loss：2.254345178604126\n",
+      "time: 3.663661003112793\n",
+      "训练次数：400，Loss：2.1829824447631836\n",
+      "time: 4.297572612762451\n",
+      "训练次数：500，Loss：2.0739898681640625\n",
+      "time: 4.915194988250732\n",
+      "训练次数：600，Loss：2.0128560066223145\n",
+      "time: 5.5582616329193115\n",
+      "训练次数：700，Loss：2.015955924987793\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mf:\\OneDrive - ahnu.edu.cn\\Vscode\\唐宇迪pytorch\\0_11_完整的训练流程.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 75>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/OneDrive%20-%20ahnu.edu.cn/Vscode/%E5%94%90%E5%AE%87%E8%BF%AApytorch/0_11_%E5%AE%8C%E6%95%B4%E7%9A%84%E8%AE%AD%E7%BB%83%E6%B5%81%E7%A8%8B.ipynb#W3sZmlsZQ%3D%3D?line=77'>78</a>\u001b[0m \u001b[39m# 训练步骤开始\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/OneDrive%20-%20ahnu.edu.cn/Vscode/%E5%94%90%E5%AE%87%E8%BF%AApytorch/0_11_%E5%AE%8C%E6%95%B4%E7%9A%84%E8%AE%AD%E7%BB%83%E6%B5%81%E7%A8%8B.ipynb#W3sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m module\u001b[39m.\u001b[39mtrain() \u001b[39m# 当网络中有dropout层、batchnorm层时，这些层能起作用\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/f%3A/OneDrive%20-%20ahnu.edu.cn/Vscode/%E5%94%90%E5%AE%87%E8%BF%AApytorch/0_11_%E5%AE%8C%E6%95%B4%E7%9A%84%E8%AE%AD%E7%BB%83%E6%B5%81%E7%A8%8B.ipynb#W3sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m \u001b[39mfor\u001b[39;00m data \u001b[39min\u001b[39;00m train_dataloader:\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/OneDrive%20-%20ahnu.edu.cn/Vscode/%E5%94%90%E5%AE%87%E8%BF%AApytorch/0_11_%E5%AE%8C%E6%95%B4%E7%9A%84%E8%AE%AD%E7%BB%83%E6%B5%81%E7%A8%8B.ipynb#W3sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m     total_train_step \u001b[39m=\u001b[39m total_train_step \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/OneDrive%20-%20ahnu.edu.cn/Vscode/%E5%94%90%E5%AE%87%E8%BF%AApytorch/0_11_%E5%AE%8C%E6%95%B4%E7%9A%84%E8%AE%AD%E7%BB%83%E6%B5%81%E7%A8%8B.ipynb#W3sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m     imgs, targets \u001b[39m=\u001b[39m data            \n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:517\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    515\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    516\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()\n\u001b[1;32m--> 517\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[0;32m    518\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    519\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    520\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    521\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:557\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    555\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m    556\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m--> 557\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m    558\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[0;32m    559\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data)\n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:44\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[1;34m(self, possibly_batched_index)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[0;32m     43\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[1;32m---> 44\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     45\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     46\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:44\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[0;32m     43\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[1;32m---> 44\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     45\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     46\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torchvision\\datasets\\cifar.py:120\u001b[0m, in \u001b[0;36mCIFAR10.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    117\u001b[0m img \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39mfromarray(img)\n\u001b[0;32m    119\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransform \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 120\u001b[0m     img \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtransform(img)\n\u001b[0;32m    122\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtarget_transform \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    123\u001b[0m     target \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtarget_transform(target)\n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torchvision\\transforms\\transforms.py:97\u001b[0m, in \u001b[0;36mToTensor.__call__\u001b[1;34m(self, pic)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, pic):\n\u001b[0;32m     90\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     91\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m     92\u001b[0m \u001b[39m        pic (PIL Image or numpy.ndarray): Image to be converted to tensor.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[39m        Tensor: Converted image.\u001b[39;00m\n\u001b[0;32m     96\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 97\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mto_tensor(pic)\n",
+      "File \u001b[1;32me:\\app\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torchvision\\transforms\\functional.py:140\u001b[0m, in \u001b[0;36mto_tensor\u001b[1;34m(pic)\u001b[0m\n\u001b[0;32m    138\u001b[0m img \u001b[39m=\u001b[39m img\u001b[39m.\u001b[39mview(pic\u001b[39m.\u001b[39msize[\u001b[39m1\u001b[39m], pic\u001b[39m.\u001b[39msize[\u001b[39m0\u001b[39m], \u001b[39mlen\u001b[39m(pic\u001b[39m.\u001b[39mgetbands()))\n\u001b[0;32m    139\u001b[0m \u001b[39m# put it from HWC to CHW format\u001b[39;00m\n\u001b[1;32m--> 140\u001b[0m img \u001b[39m=\u001b[39m img\u001b[39m.\u001b[39;49mpermute((\u001b[39m2\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m1\u001b[39;49m))\u001b[39m.\u001b[39mcontiguous()\n\u001b[0;32m    141\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(img, torch\u001b[39m.\u001b[39mByteTensor):\n\u001b[0;32m    142\u001b[0m     \u001b[39mreturn\u001b[39;00m img\u001b[39m.\u001b[39mto(dtype\u001b[39m=\u001b[39mdefault_float_dtype)\u001b[39m.\u001b[39mdiv(\u001b[39m255\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -376,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pytorch')",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -390,12 +368,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e88457d6133781447915b440b258f55cb00eb78ff373bb1d13c46c34b1089a25"
+    "hash": "52078a61cf360e1cb9de801769e3cf77056a7e6fc9ad1b4a4e5b78b8e2b4c3dc"
    }
   }
  },
